--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -53,6 +53,8 @@
                                   Command="{Binding IgnoreCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItems}" />
                         <MenuItem Header="Play file"
                                   Command="{Binding PlayFileCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
+                        <MenuItem Header="Open file location"
+                                  Command="{Binding OpenFileLocationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                     </ContextMenu>
                 </ListView.ContextMenu>
                 <ListView.View>
