--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="DoenaSoft.WatchHistory.Main.Implementations.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="{Binding Title, Mode=OneTime}" Height="900" Width="1200" WindowStartupLocation="CenterScreen" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO"
@@ -50,6 +50,8 @@
                                   Command="{Binding PlayFileCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                         <MenuItem Header="Add &quot;Watched&quot; event"
                                   Command="{Binding AddWatchedCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItems}" />
+                        <MenuItem Header="Add &quot;Watched on&quot; event"
+                                  Command="{Binding AddWatchedOnCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItems}" />
                         <MenuItem Header="Play file &amp; Add &quot;Watched&quot; event"
                                   Command="{Binding PlayFileAndAddWatchedCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                         <MenuItem Header="Ignore"
