--- a/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
+++ b/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
@@ -1,11 +1,10 @@
 ﻿<Window x:Class="DoenaSoft.WatchHistory.Settings.Implementations.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoenaSoft.WatchHistory.Settings.Implementations"
         mc:Ignorable="d"
-        Title="Settings" WindowStartupLocation="CenterScreen"  WindowStyle="ToolWindow" Height="400" Width="1024" MaxHeight="400"
+        Title="Settings" WindowStartupLocation="CenterOwner"  WindowStyle="ToolWindow" Height="400" Width="1024" MaxHeight="400" MinHeight="400"
         Loaded="OnLoaded" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO">
     <Grid>
         <Grid.ColumnDefinitions>
