--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -11,6 +11,7 @@
             <MenuItem Header="Settings" Command="{Binding OpenSettingsCommand}" />
             <MenuItem Header="Import DVD Profiler Collection" Command="{Binding ImportCollectionCommand}" />
             <MenuItem Header="Undo Ignore" Command="{Binding UndoIgnoreCommand}" />
+            <MenuItem Header="Check for Update" Command="{Binding CheckForUpdateCommand}" />
         </Menu>
 
         <Grid DockPanel.Dock="Bottom">
@@ -58,6 +59,8 @@
                                   Command="{Binding IgnoreCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItems}" />
                         <MenuItem Header="Open file location"
                                   Command="{Binding OpenFileLocationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
+                        <MenuItem Header="Show History"
+                                  Command="{Binding ShowHistoryCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                     </ContextMenu>
                 </ListView.ContextMenu>
                 <ListView.View>
