--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -61,6 +61,8 @@
                                   Command="{Binding OpenFileLocationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                         <MenuItem Header="Show History"
                                   Command="{Binding ShowHistoryCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
+                        <MenuItem Header="Edit running time"
+                                  Command="{Binding EditRunningTimeCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}" />
                     </ContextMenu>
                 </ListView.ContextMenu>
                 <ListView.View>
@@ -85,7 +87,7 @@
                                                   Command="{Binding SortCommand}" 
                                                   CommandParameter="CreationTime" />
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding VideoLength}" Width="100">
+                        <GridViewColumn DisplayMemberBinding="{Binding RunningTime}" Width="100">
                             <GridViewColumnHeader Content="Running Time" />
                         </GridViewColumn>
                     </GridView>
