--- a/WatchHistory/WatchHistory/Ignore/Implementations/IgnoreWindow.xaml
+++ b/WatchHistory/WatchHistory/Ignore/Implementations/IgnoreWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Undo Ignore" Height="900" Width="1200" WindowStartupLocation="CenterScreen" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO"
+        Title="Undo Hide" Height="900" Width="1200" WindowStartupLocation="CenterScreen" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO"
         FocusManager.FocusedElement="{Binding ElementName=FilterTextBox}">
     <Grid >
         <Grid.ColumnDefinitions>
@@ -31,7 +31,7 @@
                       Margin="5,5,5,5">
             <ListView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Undo Ignore"
+                    <MenuItem Header="Undo Hide"
                                   Command="{Binding UndoIgnoreCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItems}" />
                 </ContextMenu>
             </ListView.ContextMenu>
