--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -26,12 +26,22 @@
 
             <DockPanel Grid.Column="0" Grid.Row="0">
                 <DockPanel DockPanel.Dock="Right">
-                    <TextBlock DockPanel.Dock="Left"
+                    <DockPanel DockPanel.Dock="Left">
+                        <TextBlock DockPanel.Dock="Left"
                                Text="Ignore Titles with Existing Watched: "
                                Margin="5,5,5,5"/>
-                    <CheckBox DockPanel.Dock="Right"
+                        <CheckBox DockPanel.Dock="Right"
                               IsChecked="{Binding IgnoreWatched}"
                               Margin="5,6,5,5"/>
+                    </DockPanel>
+                    <DockPanel DockPanel.Dock="Right">
+                        <TextBlock DockPanel.Dock="Left"
+                               Text="Search in File Path: "
+                               Margin="5,5,5,5"/>
+                        <CheckBox DockPanel.Dock="Right"
+                              IsChecked="{Binding SearchInPath}"
+                              Margin="5,6,5,5"/>
+                    </DockPanel>
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Left">
                     <TextBlock DockPanel.Dock="Left"
@@ -42,7 +52,6 @@
                              Margin="5,5,5,5"/>
                 </DockPanel>
             </DockPanel>
-
             <ListView Grid.Column="0" Grid.Row="1"            
                       ItemsSource="{Binding Entries, Mode=OneWay}"
                       Margin="5,5,5,5">
