--- a/WatchHistory/WatchHistory/Manual/Implementations/ManualWindow.xaml
+++ b/WatchHistory/WatchHistory/Manual/Implementations/ManualWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="DoenaSoft.WatchHistory.YoutubeLink.Implementations.YoutubeLinkWindow"
+﻿<Window x:Class="DoenaSoft.WatchHistory.Manual.Implementations.ManualWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Add Youtube Link" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="160" Width="430" MinWidth="400" MaxHeight="160" MinHeight="160"
+        Title="Add Manual Entry" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="160" Width="430" MinWidth="400" MaxHeight="160" MinHeight="160"
         Loaded="OnLoaded" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO"
-        FocusManager.FocusedElement="{Binding ElementName=UrlTextBox}">
+        FocusManager.FocusedElement="{Binding ElementName=TitleTextBox}">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="60*"/>
             <ColumnDefinition Width="60"/>
             <ColumnDefinition Width="60"/>
             <ColumnDefinition Width="60"/>
@@ -23,21 +23,23 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5"
-                 Content="Youtube URL:"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5" Name="UrlTextBox"
-                 Text="{Binding YoutubeLink, UpdateSourceTrigger=PropertyChanged}" />
-        <Button Grid.Column="5" Grid.Row="0" Content="Scan" Margin="5,5,5,5"
-                Command="{Binding ScanCommand}" />
-        <Label Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Title:"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
-                 Text="{Binding YoutubeTitle, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5" Name="TitleTextBox"
+                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
+                 Content="Running Time:"/>
+        <xctk:ByteUpDown Grid.Column="1" Grid.Row="1" Minimum="0" Margin="5,5,5,5"
+                         Value="{Binding LengthHours}" />
+        <xctk:ByteUpDown Grid.Column="2" Grid.Row="1" Minimum="0" Maximum="59" Margin="5,5,5,5"
+                         Value="{Binding LengthMinutes}" />
+        <xctk:ByteUpDown Grid.Column="3" Grid.Row="1" Minimum="0" Maximum="59" Margin="5,5,5,5"
+                         Value="{Binding LengthSeconds}" />
         <DatePicker Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" Padding="5,6,5,5"
-                    SelectedDate="{Binding Date}" />
+                    SelectedDate="{Binding WatchedDate}" />
         <xctk:ByteUpDown Grid.Column="2" Grid.Row="2" Minimum="0" Maximum="23" Margin="5,5,5,5"
-                         Value="{Binding Hour}" />
+                         Value="{Binding WatchedHour}" />
         <xctk:ByteUpDown Grid.Column="3" Grid.Row="2" Minimum="0" Maximum="59" Margin="5,5,5,5"
-                         Value="{Binding Minute}" />
+                         Value="{Binding WatchedMinute}" />
         <Button Grid.Column="4" Grid.Row="2" Content="Accept" Margin="5,5,5,5"
                 Command="{Binding AcceptCommand}" />
         <Button Grid.Column="5" Grid.Row="2" Content="Cancel" Margin="5,5,5,5"
