--- a/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
+++ b/WatchHistory/WatchHistory/Main/Implementations/MainWindow.xaml
@@ -15,7 +15,7 @@
                 <MenuItem Header="Add Manual Entry" Command="{Binding AddManualEntryCommand}" />
             </MenuItem>            
             <MenuItem Header="Undo Hide" Command="{Binding UndoIgnoreCommand}" />
-            <MenuItem Header="Show Report" Command="{Binding ShowReportCommand}" />
+            <MenuItem Header="Create Report" Command="{Binding ShowReportCommand}" />
             <MenuItem Header="Help">
                 <MenuItem Header="Check for Update" Command="{Binding CheckForUpdateCommand}" />
                 <MenuItem Header="About" Command="{Binding AboutCommand}" />
