--- a/WatchHistory/WatchHistory/SelectUser/Implementations/SelectUserWindow.xaml
+++ b/WatchHistory/WatchHistory/SelectUser/Implementations/SelectUserWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Select User" Height="100" Width="150" MaxHeight="100" MaxWidth="150" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen"
-        Loaded="OnLoaded" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO">
+        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico">
     <DockPanel>
         <ComboBox DockPanel.Dock="Top"
                       ItemsSource="{Binding Path=Users, Mode=OneTime}" SelectedItem="{Binding SelectedUser}" IsSynchronizedWithCurrentItem="True" 
