--- a/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
+++ b/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Settings" WindowStartupLocation="CenterOwner"  WindowStyle="ToolWindow" Height="400" Width="1024" MaxHeight="400" MinHeight="400"
-        Loaded="OnLoaded" Icon="pack://siteoforigin:,,,/DJDSOFT.ICO">
+        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
