--- a/WatchHistory/WatchHistory/AddManualEntry/Implementations/ManualWindow.xaml
+++ b/WatchHistory/WatchHistory/AddManualEntry/Implementations/ManualWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Add Manual Entry" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="160" Width="430" MinWidth="400" MaxHeight="160" MinHeight="160"
+        Title="Add Manual Entry" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="200" Width="430" MinWidth="400" MaxHeight="200" MinHeight="160"
         Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico"
         FocusManager.FocusedElement="{Binding ElementName=TitleTextBox}">
     <Grid>
@@ -21,28 +21,33 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Title:"/>
         <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5" Name="TitleTextBox"
                  Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
+                 Content="Note:"/>
+        <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5" Name="NoteTextBox"
+                 Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Running Time:"/>
-        <xctk:ByteUpDown Grid.Column="1" Grid.Row="1" Minimum="0" Margin="5,5,5,5"
+        <xctk:ByteUpDown Grid.Column="1" Grid.Row="2" Minimum="0" Margin="5,5,5,5"
                          Value="{Binding LengthHours}" />
-        <xctk:ByteUpDown Grid.Column="2" Grid.Row="1" Minimum="0" Maximum="59" Margin="5,5,5,5"
+        <xctk:ByteUpDown Grid.Column="2" Grid.Row="2" Minimum="0" Maximum="59" Margin="5,5,5,5"
                          Value="{Binding LengthMinutes}" />
-        <xctk:ByteUpDown Grid.Column="3" Grid.Row="1" Minimum="0" Maximum="59" Margin="5,5,5,5"
-                         Value="{Binding LengthSeconds}" />
-        <DatePicker Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" Padding="5,6,5,5"
-                    SelectedDate="{Binding WatchedDate}" />
-        <xctk:ByteUpDown Grid.Column="2" Grid.Row="2" Minimum="0" Maximum="23" Margin="5,5,5,5"
-                         Value="{Binding WatchedHour}" />
         <xctk:ByteUpDown Grid.Column="3" Grid.Row="2" Minimum="0" Maximum="59" Margin="5,5,5,5"
+                         Value="{Binding LengthSeconds}" />
+        <DatePicker Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Margin="5,5,5,5" Padding="5,6,5,5"
+                    SelectedDate="{Binding WatchedDate}" />
+        <xctk:ByteUpDown Grid.Column="2" Grid.Row="3" Minimum="0" Maximum="23" Margin="5,5,5,5"
+                         Value="{Binding WatchedHour}" />
+        <xctk:ByteUpDown Grid.Column="3" Grid.Row="3" Minimum="0" Maximum="59" Margin="5,5,5,5"
                          Value="{Binding WatchedMinute}" />
-        <Button Grid.Column="4" Grid.Row="2" Content="Accept" Margin="5,5,5,5"
+        <Button Grid.Column="4" Grid.Row="3" Content="Accept" Margin="5,5,5,5"
                 Command="{Binding AcceptCommand}" />
-        <Button Grid.Column="5" Grid.Row="2" Content="Cancel" Margin="5,5,5,5"
+        <Button Grid.Column="5" Grid.Row="3" Content="Cancel" Margin="5,5,5,5"
                 Command="{Binding CancelCommand}" />
     </Grid>
 </Window>
