--- a/WatchHistory/WatchHistory/AddManualEntry/Implementations/ManualWindow.xaml
+++ b/WatchHistory/WatchHistory/AddManualEntry/Implementations/ManualWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="Add Manual Entry" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="200" Width="430" MinWidth="400" MaxHeight="200" MinHeight="160"
-        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico"
-        FocusManager.FocusedElement="{Binding ElementName=TitleTextBox}">
+        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico" FocusManager.FocusedElement="{Binding ElementName=TitleTextBox}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -29,7 +28,7 @@
                  Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Note:"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5" Name="NoteTextBox"
+        <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="1" Margin="5,5,5,5" Padding="5,6,5,5"
                  Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Running Time:"/>
