--- a/WatchHistory/WatchHistory/EditRunningTime/Implementations/EditRunningTimeWindow.xaml
+++ b/WatchHistory/WatchHistory/EditRunningTime/Implementations/EditRunningTimeWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="Running Time" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="80" Width="430" MinWidth="400" MaxHeight="80" MinHeight="80"
-        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico">
+        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico" FocusManager.FocusedElement="{Binding ElementName=MinuteUpDown}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="60"/>
@@ -21,7 +21,7 @@
         <xctk:ByteUpDown Grid.Column="0" Minimum="0" Maximum="99" Margin="5,5,5,5"
                          Value="{Binding Hours}" />
         <Label Grid.Column="1" Content="h" VerticalAlignment="Center" Margin="0,5,0,5"/>
-        <xctk:ByteUpDown Grid.Column="2" Minimum="0" Maximum="59" Margin="5,5,5,5"
+        <xctk:ByteUpDown Grid.Column="2" Minimum="0" Maximum="59" Margin="5,5,5,5" Name="MinuteUpDown"
                          Value="{Binding Minutes}" />
         <Label Grid.Column="3" Content="m" VerticalAlignment="Center" Margin="0,5,0,5"/>
         <xctk:ByteUpDown Grid.Column="4" Minimum="0" Maximum="59" Margin="5,5,5,5"
