--- a/WatchHistory/WatchHistory/EditTitle/Implementations/EditTitleWindow.xaml
+++ b/WatchHistory/WatchHistory/EditTitle/Implementations/EditTitleWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Edit title" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" Height="120" Width="600" MinWidth="600" MaxHeight="120" MinHeight="120"
-        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico">
+        Loaded="OnLoaded" Icon="/WatchHistory;component/djdsoft.ico" FocusManager.FocusedElement="{Binding ElementName=TitleTextBox}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="60"/>
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5"
                  Content="Title:"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5"
+        <TextBox Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="0" Margin="5,5,5,5" Padding="5,6,5,5" Name="TitleTextBox"
                  Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
         <Button Grid.Column="2" Grid.Row="1" Content="Accept" Margin="5,5,5,5"
                 Command="{Binding AcceptCommand}" />
