--- a/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
+++ b/WatchHistory/WatchHistory/Settings/Implementations/SettingsWindow.xaml
@@ -23,6 +23,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
             <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
 
@@ -102,7 +103,17 @@
                 Command="{Binding RemoveFileExtensionCommand}" Content="-"
                 Margin="5,5,5,5" />
 
-        <Button Grid.Column="0" Grid.Row="9"
+
+        <Label Grid.Column="0" Grid.Row="9"
+                Content="Hide Deleted"
+                Margin="5,5,5,5" />
+
+        <CheckBox Grid.Column="1" Grid.Row="9"
+                IsChecked="{Binding HideDeleted}"
+                Content="Hide Deleted"
+                Margin="5,5,5,5" />
+
+        <Button Grid.Column="0" Grid.Row="10"
                 Command="{Binding AcceptCommand}" Content="Accept"
                 Margin="5,5,5,5" />
     </Grid>
